<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCE1E9"
    tools:context=".NewTripActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#449DD1"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/button"
            style="@android:style/TextAppearance.Large"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:fontFamily="sans-serif"
            android:onClick="back"
            android:textColor="#fff"
            tools:ignore="OnClick" />
        <!--android:drawableLeft="@drawable/ic_send_black_24dp"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nueva_asistencia"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nombre_completo"
            android:textSize="18sp"
            app:fontFamily="sans-serif-black" />

        <LinearLayout

            android:id="@+id/employeeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinEmployeeName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:gravity="start"
                android:padding="10dp"
                android:textColorHint="#363732"
                android:typeface="serif" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/correo_electronico"
            android:textSize="18sp"
            app:fontFamily="sans-serif-black" />

        <EditText
            android:id="@+id/txtEmployeeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:drawableEnd="@drawable/ic_mail_outline_mainblue_24dp"
            android:textCursorDrawable="@drawable/color_cursos_mblue"
            android:elevation="4dp"
            android:padding="15dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fecha"
            android:textSize="18sp"
            app:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/txtAssistDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:drawableEnd="@drawable/ic_insert_invitation_black_24dp"
            android:elevation="4dp"
            android:gravity="start"
            android:hint="@string/formato_fecha"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/condicion"
            android:textSize="18sp"
            app:fontFamily="sans-serif-black" />

        <LinearLayout
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/AssistStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:entries="@array/assistance_array"
                android:gravity="start"
                android:padding="10dp"
                android:textColorHint="#363732"
                android:typeface="serif" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveAssistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/buttonsstylesnormal"
            android:text="@string/guardar"
            android:textColor="#fff" />

    </LinearLayout>
</RelativeLayout>