<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="5dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:background="@mipmap/ic_launcher"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:elevation="5dp">

            <TextView
                android:id="@+id/txtEmployeeFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@string/nombre_empleado"
                android:textColor="#363732"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtEmployeeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmployeeFullName"
                android:textColor="#363732"
                android:layout_marginStart="10dp"
                android:text="@string/id_empleado"
                android:textSize="15sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/txtEmployeeState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmployeeFullName"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/condicion"
                android:textColor="#363732"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>